--- a/JAVASCRIPT/Document_Objct_Model/calculator/calcstyle.css
+++ b/JAVASCRIPT/Document_Objct_Model/calculator/calcstyle.css
@@ -6,25 +6,26 @@ body{
     border-radius: 2%;
     padding: 4%;
     width: 230px;
-    height: 308px;
+    height: 368px;
 }
-.zero{
-    width: 238%;
-}
-.equal{
+
+/* .equal{
     position: relative;
     left: 130%;
 }
 .plus{
     position: relative;
     left: 130%;
-}
+} */
 td{
     padding: 7px;
     border-spacing: 25px;
 }
 .control{
-    background-color: palegreen;
+    background-color: rgb(186, 225, 226);
     width: 200px;
     height: 45px;
+}
+.dot{
+    width: 35px;
 }
